--- a/_sass/common/_header.scss
+++ b/_sass/common/_header.scss
@@ -2,7 +2,7 @@
 // -----------------------------------------------------------------------------
 
 .header {
-  @include positioner(fixed, $header-wd, $header-ht, top, 0, left, 0, $zi-100);
+  @include positioner(fixed, $header-wd, $header-ht, top, 0, left, 0, $zi-500);
   background-color: $header-bg;
   box-shadow: 0 $br-base $c-light;
 
@@ -30,7 +30,7 @@
   }
 
   &__nav {
-    @include positioner($header-nav-po, $header-nav-wd, $header-nav-ht, top, $header-ht, left, 0, $zi-100);
+    @include positioner($header-nav-po, $header-nav-wd, $header-nav-ht, top, $header-ht, left, 0, $zi-500);
     overflow-y: auto;
 
     @media ($medium-up) {
@@ -42,7 +42,7 @@
   }
 
   &__hamburger {
-    @include positioner(absolute, $header-hamburger-wd, $header-hamburger-ht, top, 0, right, 0, $zi-100);
+    @include positioner(absolute, $header-hamburger-wd, $header-hamburger-ht, top, 0, right, 0, $zi-500);
     line-height: $header-hamburger-ht;
     background-color: $header-hamburger-bg;
   }
