--- a/_sass/patterns/_carousel.scss
+++ b/_sass/patterns/_carousel.scss
@@ -175,7 +175,7 @@
   }
 
   .carousel__callout {
-    @include positioner(absolute, 100%, auto, bottom, 0, left, 0, $zi-100);
+    @include positioner(absolute, 100%, auto, bottom, 0, left, 0, $zi-50);
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
